don't use input windows on Qt < 4.8.3

According to aacid, it's been broken in every Qt version before

BUG: 312784
REVIEW: 108249